--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -192,6 +192,42 @@ label.required:before {
     to {opacity: 1}
 }
 
+.footer {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 30px;
+}
+
+.pagination {
+    display: flex;
+    gap: 10px;
+    flex-direction: row;
+}
+
+.pagination-btn {
+    display: block;
+    text-decoration: none;
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
+    background-color: white;
+    color: black;
+    text-align: center;
+    line-height: 40px;
+    cursor: pointer;
+    user-select: none;
+}
+
+.pagination-btn:hover {
+    background-color: rgb(214, 214, 214);
+}
+
+.pag-btn-is-active {
+    cursor: default;
+    background-color: white !important;
+}
+
 /* .form-control {
     width: 500px !important;
 } */
